* Core: minor layout issues (index.css, compat.css) [Bug 3755]
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@9034 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/core/css/index.css
+++ b/Themes/core/css/index.css
@@ -2588,13 +2588,11 @@ div#profile_success
 	float: left;
 	width: 60%;
 	margin: 0 0 10px 0;
-	height: 0.1%;
 }
 
 #ignoreboards
 {
 	overflow: auto;
-	height: 0.1%;
 }
 
 #ignoreboards li
@@ -2609,7 +2607,6 @@ div#profile_success
 #theme_settings
 {
 	overflow: auto;
-	height: 0.1%;
 	margin: 0;
 	padding: 0;
 }
