--- a/Themes/default/css/compat.css
+++ b/Themes/default/css/compat.css
@@ -1703,13 +1703,11 @@ div#profile_success
 	float: left;
 	width: 60%;
 	margin: 0 0 10px 0;
-	height: 0.1%;
 }
 
 #ignoreboards
 {
 	overflow: auto;
-	height: 0.1%;
 }
 
 #ignoreboards li
@@ -1724,7 +1722,6 @@ div#profile_success
 #theme_settings
 {
 	overflow: auto;
-	height: 0.1%;
 	margin: 0;
 	padding: 0;
 }
